# greenwood

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  ROADMAP.md  great-docs.yml  index.qmd  pyproject.toml
.claude/skills/release-notes/: SKILL.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: ci.yml  docs.yml
_freeze/index/execute-results/: html.json
_freeze/reference/AFT/execute-results/: html.json
_freeze/reference/AalenJohansen/execute-results/: html.json
_freeze/reference/CensoringType/execute-results/: html.json
_freeze/reference/CoxNet/execute-results/: html.json
_freeze/reference/CoxNetCVResult/execute-results/: html.json
_freeze/reference/CoxPH/execute-results/: html.json
greenwood/: __init__.py  _backends.py  _competing.py  _core.py  _cox.py  _flexible.py  _metrics.py  _nonparametric.py  _parametric.py  _penalized.py  _power.py  _repr.py  _resample.py  _rmst.py  _surv.py  _tests.py  _univariate.py
greenwood/data/: __init__.py
greenwood/summaries/: _registry.py
greenwood/tidy/: __init__.py  _registry.py
greenwood/viz/: __init__.py  _altair.py  _cif.py  _curves.py  _forest.py  _gt.py  _shared.py
scripts/: export_datasets.R  regenerate_r_fixtures.R
tests/: _r_parity.py  test_aft_mean_predictions.py  test_aft_survival_ci.py  test_backends.py  test_calibration_format.py  test_cif.py  test_competing.py  test_core.py  test_coverage_edges.py  test_cox.py  test_cox_baseline_ci.py  test_cox_format.py  test_cross_validate_formats.py  test_data.py  test_flexible.py  test_forest.py  test_logrank.py  test_metrics.py  test_nonparametric.py  test_parametric.py  test_penalized.py  test_power.py  test_r_parity.py  test_repr.py  test_repr_helpers.py  test_resample.py  test_rmst.py  test_surv.py  test_surv_edge_cases.py  test_tidy_registry.py  test_time_dependent_auc.py  test_univariate.py  test_viz.py  test_viz_altair.py  test_viz_cif.py
tests/fixtures/r/: aft_exponential.json  aft_loglogistic.json  aft_lognormal.json  aft_weibull.json  brier_lung.json  cif_mgus2.json  counting_truncation.json  cox_basehaz_ci.json  cox_cluster.json  cox_diag_breslow.json  cox_diag_efron.json  cox_lung_age_sex_breslow.json  cox_lung_age_sex_efron.json  cox_lung_three_efron.json  cox_residuals_breslow.json  cox_robust.json  cox_strata.json  cox_survci_breslow.json  cox_timevarying.json  finegray_mgus2_pcm.json  grho_lung_sex_rho1.json  km_lung_by_sex.json  km_lung_overall.json  km_veteran_overall.json  logrank_lung_sex.json  logrank_stratified_lung_sex_ecog.json  logrank_veteran_celltype.json  lung_km_by_sex.json  lung_km_overall.json  multistate_mgus2.json  pairwise_logrank_veteran.json  parametric_exponential.json  parametric_loglogistic.json  parametric_lognormal.json  parametric_weibull.json  risk_table_lung_sex.json  rmst.json  rmst_twogroup_lung.json  rp_weibull_anchor.json  td_auc_lung.json  (+1 more)
user_guide/: 00-get-started.qmd  01-installation.qmd  02-quick-start.qmd  03-survival-data.qmd  04-data-sources.qmd  05-kaplan-meier.qmd  06-comparing-groups.qmd  07-visualization.qmd  08-cox-regression.qmd  09-cox-diagnostics.qmd  10-parametric-models.qmd  11-competing-risks.qmd  12-multi-state.qmd  13-prediction-performance.qmd  14-glossary.qmd
(+65 files in other folders)
